<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".JJ_OCTranspoActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/toolBar"/>

        <TextView
            android:id="@+id/projectTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#14213D"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/project_Title"
            android:textAlignment="viewStart"
            android:textColor="#F7F4F3"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textV_stationNo"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/entry_StationNo"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/stationEditText"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:hint="@string/hint"
            android:inputType="number"
            android:textColor="#14213D"
            android:textStyle="bold" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="32dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/search"/>

        <TextView
            android:id="@+id/availableBuses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="32dp"
            android:text="@string/availableBusRoutes"
            android:textColor="#14213D"
            android:textSize="16sp"
            android:background="#96FF7E"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/busStationNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="8888"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/busStationName"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="-42dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Bus Station"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/busRoutesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/popout_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/main_activity_actions"
            app:headerLayout="@layout/jj_popout_header"/>

</androidx.drawerlayout.widget.DrawerLayout>