<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/popout_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolBar"/>

    <TextView
        android:id="@+id/busStationNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="8888"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/busStationName"
        app:layout_constraintTop_toBottomOf="@+id/availableBuses"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/busStationName"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Bus Station"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableBuses"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#14213D"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/project_Title"
        android:textAlignment="viewStart"
        android:textColor="#F7F4F3"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textV_stationNo"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/entry_StationNo"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle" />

    <EditText
        android:id="@+id/stationEditText"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="#14213D"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/textV_stationNo"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="@+id/textV_stationNo"
        app:layout_constraintTop_toBottomOf="@+id/textV_stationNo" />

    <TextView
        android:id="@+id/availableBuses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/availableBusRoutes"
        android:textColor="#14213D"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        android:visibility="invisible"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/busRoutesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="320dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busStationName" />

</androidx.constraintlayout.widget.ConstraintLayout>

